--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ jobs:
         run: |
           npm install
           npm run build
+        env:
+          VITE_PIXABEY_KEY: ${{ secrets.VITE_PIXABEY_KEY }}
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
